<resources>
    <string name="app_name">LearningAndroid</string>
    <string name="pokemon_list_title">Pokemon</string>
    <string name="add_pokemon">Add new pokemon</string>
    <string name="pokemon_name_placeholder">PokemonName</string>
    <string name="pokemon_description_placeholder">PokemonDescription</string>
    <string name="details_title">Details</string>
    <string name="add_new_title">Add new Pokemon</string>
    <string name="save">Save</string>
    <string name="name_placeholder">Name</string>
    <string name="description_placeholder">Description</string>
    <string name="add_name_placeholder">Pikachu</string>
    <string name="add_description_placeholder">An electric squirrel</string>
    <string name="main_preference_key">com.example.infinum.learningandroid.MainActivity</string>
    <string name="error_cant_save">Unable to save</string>
    <string name="not_saved">Do you want to save changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="saved">Saved</string>
    <string name="no_pokemons">No Pokemons</string>
    <string name="to_add_some_pokemons">To add some Pokemons, press + icon</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="category">Category</string>
    <string name="abilities">Abilities</string>
    <string name="gender">Gender</string>
    <string name="add_height_placeholder">1m</string>
    <string name="add_weight_placeholder">1kg</string>
    <string name="add_category_placeholder">Electric</string>
    <string name="add_abilities_placeholder">Iron tail</string>
    <string name="add_gender_placeholder">M</string>
    <string name="open_gallery_with">Open gallery with</string>
    <string name="open_camera_with">Open camera with</string>
    <string name="error_no_camera_app">There is no application which can take pictures</string>
    <string name="error_no_gallery_app">There is no application which can browse your images</string>
    <string name="choose_dialog_title">Dialog</string>
    <string name="choose_dialog_message">How do you want to get the image?</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="error_load_gallery_image">Could not load image</string>
    <string name="error_file_not_found">File not found</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login_email_placeholder">student@infinum.hr</string>
    <string name="login_password_placeholder">infinum1</string>
    <string name="sign_up_nickname_placeholder">PersonOfInterest</string>
    <string name="nickname">Nickname</string>
    <string name="confim_password">Confirm password</string>
    <string name="error_incorrect_inputs">Incorrect inputs</string>
    <string name="error_email_empty">E-mail is empty!</string>
    <string name="error_nickname_empty">Nickname is empty!</string>
    <string name="error_password_empty">Password is empty!</string>
    <string name="error_password_not_match">Passwords do not match!</string>
    <string name="api_url">https://pokeapi.infinum.co</string>
    <string name="error_invalid_credentials">Invalid email or password</string>
    <string name="error_can_not_signup">Can not sign up!</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_pokemon_list">Could not get pokemons</string>
    <string name="error_requires_name">Name needed</string>
    <string name="error_requires_height">Height needed</string>
    <string name="error_requires_weight">Weight needed</string>
    <string name="error_requires_category">Category needed</string>
    <string name="error_requires_abilities">Abilities needed</string>
    <string name="error_requires_description">Description needed</string>
    <string name="error_could_not_read_types">Could not read the pokemon types from the server</string>
    <string name="error_could_not_read_moves">Could not read pokemon moves from the server</string>
    <string name="error_failure_to_login">Failure to login</string>
    <string name="error_failure_to_signup">Failure to sign up</string>
    <string name="error_user_not_logged_in">User is not logged in</string>
    <string name="error_could_not_get_user">Could not get the user from the server</string>
    <string name="error_could_not_find_user">Could not find the user with that id</string>
    <string name="error_not_email">Not a valid email</string>
    <string name="error_password_length">Needs to be at least 8 characters long </string>
    <string name="navigation_name_placeholder">Student name</string>
    <string name="navigation_email_placeholder">student@infinum.hr</string>
    <string name="drawer_opened">Drawer is open</string>
    <string name="drawer_closed">Drawer is closed</string>
    <string name="logout">Logout</string>
    <string name="error_requires_gender">Gender needed</string>
    <string name="error_database_save">Could not save pokemon to database</string>
</resources>
