<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/addImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/light_gray"
            app:srcCompat="@drawable/ic_image_black_48dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/addContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/addNameLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_3x"
                    android:layout_marginRight="@dimen/spacing_2x"
                    android:layout_marginTop="@dimen/spacing_2x"
                    android:orientation="horizontal"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/addPersonIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:layout_marginRight="@dimen/spacing_2.5x"
                        android:layout_marginTop="@dimen/spacing_1x"
                        app:srcCompat="@drawable/ic_person" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/addNameInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/name_placeholder"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/addHeightInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/height"
                            android:inputType="numberDecimal" />

                        <EditText
                            android:id="@+id/addWeightInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/weight"
                            android:inputType="numberDecimal" />

                        <EditText
                            android:id="@+id/addCategoryInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/category"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/addAbilitiesInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/abilities"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/addGenderInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/gender" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/addDescriptionLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_3x"
                    android:layout_marginTop="@dimen/spacing_1x"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addNameLayout">

                    <ImageView
                        android:id="@+id/addDescriptionIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/spacing_2.5x"
                        app:srcCompat="@drawable/ic_description" />

                    <EditText
                        android:id="@+id/addDescriptionInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/spacing_2x"
                        android:hint="@string/description_placeholder"
                        android:inputType="textPersonName" />
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/addSaveButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_8x"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/spacing_2.5x" />

            <ProgressBar
                android:id="@+id/addProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addFloatingAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_2x"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:src="@drawable/ic_add"
        app:borderWidth="0dp"
        app:layout_anchor="@id/addContent"
        app:layout_anchorGravity="right|end" />

</android.support.design.widget.CoordinatorLayout>