<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/detailsAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/detailsCollapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/detailsImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_30x"
                android:background="@color/xlight_gray"
                android:src="@drawable/ic_image_black_48dp" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_2x"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:id="@+id/view"
                    android:layout_width="@dimen/spacing_1x"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/spacing_1x"
                    android:layout_marginLeft="@dimen/spacing_2.5x"
                    android:layout_marginTop="@dimen/spacing_1x"
                    android:background="@color/light_green"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detailsName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_3x"
                    android:layout_marginLeft="@dimen/spacing_2x"
                    android:layout_marginRight="@dimen/spacing_3x"
                    android:layout_marginStart="@dimen/spacing_2x"
                    android:layout_marginTop="@dimen/spacing_1x"
                    android:text="@string/pokemon_name_placeholder"
                    android:textColor="@color/light_green"
                    android:textSize="@dimen/spacing_3.5x"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/view"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detailsDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_1x"
                    android:layout_marginEnd="@dimen/spacing_3x"
                    android:layout_marginLeft="@dimen/spacing_2x"
                    android:layout_marginRight="@dimen/spacing_3x"
                    android:layout_marginStart="@dimen/spacing_2x"
                    android:layout_marginTop="@dimen/spacing_1x"
                    android:text="@string/pokemon_description_placeholder"
                    android:textSize="@dimen/spacing_2x"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/view"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detailsName" />

            </android.support.constraint.ConstraintLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_2.5x"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/spacing_2.5x"
                    android:layout_marginLeft="@dimen/spacing_2.5x"
                    android:layout_marginRight="@dimen/spacing_2.5x"
                    android:layout_marginStart="@dimen/spacing_2.5x"
                    android:layout_marginTop="@dimen/spacing_1x"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/detailsHeightTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/height"
                            android:textColor="@color/light_green"
                            android:textSize="@dimen/spacing_2.5x" />

                        <TextView
                            android:id="@+id/detailsHeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_height_placeholder" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/detailsWeightTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight"
                            android:textColor="@color/light_green"
                            android:textSize="@dimen/spacing_2.5x" />

                        <TextView
                            android:id="@+id/detailsWeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_weight_placeholder" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/detailsCategoryTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category"
                            android:textColor="@color/light_green"
                            android:textSize="@dimen/spacing_2.5x" />

                        <TextView
                            android:id="@+id/detailsCategory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_category_placeholder" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/spacing_2.5x"
                    android:layout_marginLeft="@dimen/spacing_2.5x"
                    android:layout_marginRight="@dimen/spacing_2.5x"
                    android:layout_marginStart="@dimen/spacing_2.5x"
                    android:layout_marginTop="@dimen/spacing_1x"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/detailsAbilitiesTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/abilities"
                            android:textColor="@color/light_green"
                            android:textSize="@dimen/spacing_2.5x" />

                        <TextView
                            android:id="@+id/detailsAbilities"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_abilities_placeholder" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/detailsGenderTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:textColor="@color/light_green"
                            android:textSize="@dimen/spacing_2.5x" />

                        <TextView
                            android:id="@+id/detailsGender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_gender_placeholder" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>