<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.infinum.learningandroid.ui.views.LogoView
        android:id="@+id/loginLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_3x"
        app:logoImage="@drawable/pokemon_logo"
        app:backgroundColor="@color/white" />

    <ImageView
        android:id="@+id/loginPokeballImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/pokeball"
        android:layout_above="@+id/loginInputLayout"
        android:layout_marginBottom="@dimen/spacing_4x"
        android:layout_below="@id/loginLogo"/>


    <Button
        android:id="@+id/loginSignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/spacing_2x"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/loginLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/spacing_2x"
        android:layout_above="@id/loginSignUpButton"/>

    <LinearLayout
        android:id="@id/loginInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@id/loginLoginButton"
        android:layout_marginBottom="@dimen/spacing_4x">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_2x"
            android:layout_marginRight="@dimen/spacing_2x"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/spacing_2x"
                android:src="@drawable/ic_mail" />

            <EditText
                android:id="@+id/loginEmailInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_2x"
            android:layout_marginRight="@dimen/spacing_2x"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/spacing_2x"
                android:src="@drawable/ic_lock" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/loginPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <ImageButton
                    android:id="@+id/loginPasswordVisibilityButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/spacing_1x"
                    android:background="@color/white"
                    android:src="@drawable/ic_visibility_off" />

            </RelativeLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/loginProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>

</RelativeLayout>